# library-webapp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  library-webapp-actions.yml
library_webapp/: crud.py  database.py  main.py  models.py  schemas.py
tests/: api_tests.sh
